Fixed old problems and aaded new routs for employe

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ CLIENT_URL=http://localhost:3000
 PORT=7654
 BodyLimit=100kb
 auth_secret="thisismyapplicationauthsecretkey"
+cloudnary_api_key=416672375683549
+cloudnary_api_secret=sF8pAeGl5CO2tTfhuCFrn1u_kHE
+no_image=https://res.cloudinary.com/findforhad/image/upload/v1577449999/no_image.jpg
