--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^3.0.0",
+    "cloudinary": "^1.18.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "mysql2": "^2.0.2",
     "nodemailer": "^6.4.2",
     "rand-token": "^0.4.0",
